--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tabler/icons-react": "^3.35.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
+    "lenis": "^1.3.13",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.546.0",
     "mini-svg-data-uri": "^1.4.4",
